--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="hero-visual">
                 <div class="profile-container">
                   <div class="profile-background"></div>
-                  <img src="assets/img/profile/" alt="Alejandro Muñoz" class="profile-image">
+                  <img src="assets/img/hero/hero-1.jpg" alt="Alejandro Muñoz" class="profile-image">
                 </div>
               </div>
             </div>
