-- dark/light mode

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
         <a href="https://github.com/Alejandromunsal" target="_blank" class="github" rel="noopener noreferrer"
           aria-label="github">
           <i class="bi bi-github"></i></a>
+          <button id="toggle-theme" class="btn">Modo Light | Dark</button>
+
       </div>
 
     </div>
@@ -374,7 +376,7 @@
                   práctico y
                   orientado a proyectos reales y casos de uso habituales.
                 </p>
-                <a href="services.html" class="service-btn">
+                <a href="/tutoriales/proxmox/servidor-lemp.html" class="service-btn">
                   Ver todos los tutoriales
                   <i class="bi bi-arrow-right"></i>
                 </a>
