--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css?v=2">
 
   <!-- =======================================================
   * Web_Name: Portfolio Alejandro Muñoz Salas
@@ -123,8 +123,9 @@
         <a href="https://github.com/Alejandromunsal" target="_blank" class="github" rel="noopener noreferrer"
           aria-label="github">
           <i class="bi bi-github"></i></a>
-          <button id="toggle-theme" class="btn">Modo Light | Dark</button>
+          <a id="toggle-theme" class="theme-toggle"><i class="bi bi-sun-fill"></i></a>
 
+          
       </div>
 
     </div>
@@ -451,12 +452,12 @@
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
               </div>
-              <a href="/servidor-lemp.html"
+              <a href="/tutoriales/proxmox/servidor-lemp.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="/servidor-lemp.html">
+                <a href="/tutoriales/proxmox/servidor-lemp.html">
                   Servidor <span>LEMP</span>
                 </a>
               </h3>
@@ -704,7 +705,7 @@
   <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/assets/js/main.js?v=1" defer></script>
+  <script src="/assets/js/main.js?v=2" defer></script>
 
 
 </body>
