-- parse md title

--- a/tutoriales/proxmox/servidor-lemp.html
+++ b/tutoriales/proxmox/servidor-lemp.html
@@ -132,8 +132,7 @@
       <!-- Page Title -->
       <div class="page-title dark-background">
         <div class="container d-lg-flex justify-content-between align-items-center">
-          <h1 class="mb-2 mb-lg-0">Servidor Lemp | Debian 12 | LXC Proxmox</h1>
-          
+          <h1 class="mb-2 mb-lg-0" id="md-title"></h1>
           <nav class="breadcrumbs">
             <ol>
               <li><a href="/services.html">Tutoriales</a></li>
@@ -145,6 +144,8 @@
       </div><!-- End Page Title -->
 
       <!-- Service Details Section -->
+    
+
       <section id="service-details" class="service-details section">
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -183,9 +184,11 @@
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
+
               <div class="content mt-3" id="md-date">
                 <!-- Aquí irá la fecha, justo debajo de la imagen del slider -->
-              </div>
+              </div>             
+
               <div class="content mt-5" id="md-content">
                 <!-- El contenido del Markdown se cargará aquí -->
               </div>
