-- md-title reusable

--- a/tutoriales/proxmox/servidor-lemp.html
+++ b/tutoriales/proxmox/servidor-lemp.html
@@ -136,7 +136,7 @@
           <ol>
             <li><a href="/services.html">Tutoriales</a></li>
             <li><a href="/services.html">Proxmox</a></li>
-            <li><a href="#">LEMP stack</a></li>
+            <li><a href="#" class="md-title"></a></li>
           </ol>
         </nav>
       </div>
@@ -184,12 +184,12 @@
               <div class="swiper-pagination"></div>
             </div>
 
-            <div class="content mt-3" id="md-date">
+            <div class="md-date content mt-3">
               <!-- Aquí irá la fecha, justo debajo de la imagen del slider -->
             </div>
-            <h1 id="md-title"></h1>
+            <h1 class="md-title"></h1>
 
-            <div class="content mt-5" id="md-content">
+            <div class="md-content content mt-5">
               <!-- El contenido del Markdown se cargará aquí -->
             </div>
             <div class="content mt-5">
