--- a/tutorial.html
+++ b/tutorial.html
@@ -8,15 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO -->
-  <title>Alejandro Muñoz Salas | Portfolio - Ingeniero de Computadores</title>
+  <title>Alejandro Muñoz Salas | Tutorial</title>
   <meta name="description"
-    content="Portfolio profesional de Alejandro Muñoz Salas, Ingeniero de Computadores por la Universidad de Sevilla. Proyectos web, desarrollo, tutoriales y más.">
+    content="Tutoriales y guías prácticas de Alejandro Muñoz Salas sobre Proxmox, Docker, Linux y más.">
   <meta name="keywords"
     content="Alejandro Muñoz Salas, AMS, Portfolio, Ingeniero de Computadores, Web Developer, Desarrollo, Tecnología, Tutoriales">
   <meta name="author" content="Alejandro Muñoz Salas">
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://alejandroms.es/servidor-lemp.html">
+  <link rel="canonical" href="https://alejandroms.es/tutoriales/">
 
   <!-- Favicon -->
   <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
@@ -81,16 +81,16 @@
           <li><a href="/portfolio.html"><i class="bi bi-images navicon"></i>Portfolio</a></li>
 
           <li class="dropdown" data-id="tutoriales">
-            <a href="/tutoriales/services.html"><i class="bi bi-hdd-stack navicon"></i>Tutoriales
+            <a href="#"><i class="bi bi-hdd-stack navicon"></i>Tutoriales
               <i class="bi bi-chevron-down toggle-dropdown"></i>
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu"><!--
               <li class="dropdown" data-id="proxmox">
                 <a href="#"><i class="bi bi-server navicon"></i>Proxmox
                   <i class="bi bi-chevron-down toggle-dropdown"></i>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="/tutoriales/proxmox/servidor-lemp.html">Servidor LEMP</a></li>
+                  <li><a href="/tutoriales/proxmox/servidor-lemp">Servidor LEMP</a></li>
                 </ul>
               </li>
               <li class="dropdown" data-id="docker">
@@ -101,7 +101,7 @@
                   <li><a href="#">Contenedor 1</a></li>
                   <li><a href="#">Contenedor 2</a></li>
                 </ul>
-              </li>
+              </li>-->
             </ul>
           </li>
           <li><a href="/resume.html"><i class="bi bi-file-earmark-text navicon"></i> CV</a></li>
