--- a/tutorial.html
+++ b/tutorial.html
@@ -68,64 +68,8 @@
 
 <body class="service-details-page">
 
-
-  <!-- Justo dentro del body, pero fuera del header -->
-  <div class="swipe-area"></div>
-
-  <header id="header" class="header dark-background d-flex flex-column justify-content-center">
-
-    <div class="header-container d-flex flex-column align-items-start">
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="/"><i class="bi bi-house navicon"></i>Inicio</a></li>
-          <li><a href="/portfolio.html"><i class="bi bi-images navicon"></i>Portfolio</a></li>
-
-          <li class="dropdown" data-id="tutoriales">
-            <a href="#"><i class="bi bi-hdd-stack navicon"></i>Tutoriales
-              <i class="bi bi-chevron-down toggle-dropdown"></i>
-            </a>
-            <ul class="dropdown-menu"><!--
-              <li class="dropdown" data-id="proxmox">
-                <a href="#"><i class="bi bi-server navicon"></i>Proxmox
-                  <i class="bi bi-chevron-down toggle-dropdown"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="/tutoriales/proxmox/servidor-lemp">Servidor LEMP</a></li>
-                </ul>
-              </li>
-              <li class="dropdown" data-id="docker">
-                <a href="#"><i class="bi bi-box navicon"></i>Docker
-                  <i class="bi bi-chevron-down toggle-dropdown"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Contenedor 1</a></li>
-                  <li><a href="#">Contenedor 2</a></li>
-                </ul>
-              </li>-->
-            </ul>
-          </li>
-          <li><a href="/resume.html"><i class="bi bi-file-earmark-text navicon"></i> CV</a></li>
-          <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        </ul>
-      </nav>
-      <div class="social-links text-center">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://github.com/Alejandromunsal" target="_blank" class="github" rel="noopener noreferrer"
-          aria-label="github">
-          <i class="bi bi-github"></i></a>
-        <a id="toggle-theme" class="theme-toggle"><i class="bi bi-sun-fill"></i></a>
-
-      </div>
-
-    </div>
-
-  </header>
-
-  <!-- Hint swipe pulsante -->
-  <div class="swipe-hint"></div>
-
-  <div><i class="header-toggle d-xl-none bi bi-list"></i></div>
+  <!-- HEADER -->
+  <div data-component="/components/header.html"></div>
 
   <main class="main">
 
@@ -326,8 +270,9 @@
   <script src="/assets/js/load-markdown.js" defer></script>
 
   <!-- Main JS File -->
-  <script src="/assets/js/main.js?v=1" defer></script>
-
+  <!-- Main JS File -->
+  <script src="/assets/js/components.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
