--- a/index.html
+++ b/index.html
@@ -111,11 +111,8 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
   <!-- highlight.js para resaltar código -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js" defer></script>
-  <!-- JS para cargar Markdown -->
-  <script src="/assets/js/load-markdown.js" defer></script>
   <!-- Main JS File -->
-  <script src="/assets/js/components.js"></script>
-  <script src="/assets/js/main.js"></script>
+  <script type="module" src="/assets/js/main.js"></script>
 
 </body>
 
