--- a/proyecto.html
+++ b/proyecto.html
@@ -257,19 +257,8 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative">
+  <div data-component="/components/footer.html"></div>
 
-    <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Portfolio</strong> <span>All Rights Reserved</span>
-        </p>
-      </div>
-      <div class="credits">
-        Designed by <a href="/resume.html">Alejandro M. S.</a>
-      </div>
-    </div>
-
-  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
@@ -294,12 +283,8 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
   <!-- highlight.js para resaltar código -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js" defer></script>
-  <!-- JS para cargar Markdown -->
-  <script src="/assets/js/load-markdown.js" defer></script>
-
   <!-- Main JS File -->
-  <script src="/assets/js/main.js?v=1" defer></script>
-
+  <script type="module" src="/assets/js/main.js?v=05"></script>
 </body>
 
 </html>
