--- a/tutorial.html
+++ b/tutorial.html
@@ -26,9 +26,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  
+
   <!-- Simple icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v16/font/simple-icons.min.css" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v16/font/simple-icons.min.css"
+    type="text/css">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +61,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" href="/assets/css/main.css?v=1">
+  <link rel="stylesheet" href="/assets/css/main.css?v=05">
 
   <!-- =======================================================
   * Web_Name: Portfolio Alejandro Muñoz Salas
@@ -76,18 +77,10 @@
 
   <main class="main">
 
-    <!-- Page Title -->
-    <div class="page-title dark-background">
-      <div id="service-page-title" class="container d-lg-flex justify-content-between align-items-center">
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="/services.html">Tutoriales</a></li>
-            <li><a href="/services.html">Proxmox</a></li>
-            <li><a href="#" class="md-title"></a></li>
-          </ol>
-        </nav>
-      </div>
-    </div><!-- End Page Title -->
+
+    <div class="container page-title" data-aos="fade-up" id="page-title">
+      <!-- Page Title Se generará dinámicamente -->
+    </div>
 
     <!-- Service Details Section -->
 
@@ -124,6 +117,7 @@
   <!-- highlight.js para resaltar código -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js" defer></script>
   <!-- Main JS File -->
-  <script type="module" src="/assets/js/main.js"></script></body>
+  <script type="module" src="/assets/js/main.js?v=05"></script>
+</body>
 
 </html>
