--- a/tutoriales.html
+++ b/tutoriales.html
@@ -63,7 +63,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" href="/assets/css/main.css?v=36">
+  <link rel="stylesheet" href="/assets/css/main.css?v=52">
 
   <!-- =======================================================
   * Web_Name: Portfolio Alejandro Muñoz Salas
@@ -73,51 +73,46 @@
 </head>
 
 <body class="index-page">
+
   <!-- HEADER -->
   <div data-component="/components/header.html"></div>
 
-  <main class="main">
+    <main class="main">
 
-    <div data-component="/components/hero.html"></div>
+      <div data-component="/components/tutoriales-browser.html"></div>
 
-    <div data-component="/components/proyectos-index.html"></div>
 
-    <div data-component="/components/tutoriales-index.html"></div>
+    </main>
 
-    <div data-component="/components/stats.html"></div>
-
-    <div data-component="/components/contact.html"></div>
-
-  </main>
-
+  <!-- FOOTER -->
   <div data-component="/components/footer.html"></div>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
-  <!-- marked.js para convertir Markdown -->
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
-  <!-- highlight.js para resaltar código -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js" defer></script>
-  <!-- Main JS File -->
-  <script type="module" src="/assets/js/main.js?v=36"></script>
-
+    <!-- Vendor JS Files -->
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
+    <script src="/assets/vendor/aos/aos.js"></script>
+    <script src="/assets/vendor/typed.js/typed.umd.js"></script>
+    <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  
+    <!-- marked.js para convertir Markdown -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
+    <!-- highlight.js para resaltar código -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js" defer></script>
+    <!-- Main JS File -->
+    <script type="module" src="/assets/js/main.js?v=52"></script>
 </body>
 
 </html>
